# reading-summarizer

./: .gitignore  README.md  pyproject.toml
configs/: digest_prompt.txt  settings.example.yaml  sources.txt
output/: ai_weekly_digest_2026-02-16.json
src/gad/: __init__.py  cli.py  config.py  dedup.py  digest.py  extract.py  fetch.py  models.py  render.py  summarize.py
tests/: conftest.py  test_dedup.py  test_extract_smoke.py
web/: app.js  digest.json  index.html  sample_digest.json  style.css
